# bytesparse

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  appveyor.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  packaging.yml
ci/: appveyor-bootstrap.py  appveyor-download.py
ci/templates/: appveyor.yml
docs/: cli.rst  conf.py  index.rst  installation.rst  reference.rst  requirements.txt
docs/_autosummary/: bytesparse._c.BlockView.rst  bytesparse._c.Memory.rst  bytesparse._c.Rover.rst  bytesparse._c.rst  bytesparse._py.Memory.rst  bytesparse._py.collapse_blocks.rst  bytesparse._py.rst  bytesparse.base.HUMAN_ASCII.rst  bytesparse.base.ImmutableMemory.rst  bytesparse.base.MutableBytesparse.rst  bytesparse.base.MutableMemory.rst  bytesparse.base.STR_MAX_CONTENT_SIZE.rst  bytesparse.base.rst  bytesparse.inplace.Memory.rst  bytesparse.inplace.bytesparse.rst  bytesparse.inplace.collapse_blocks.rst  bytesparse.inplace.rst  bytesparse.io.MemoryIO.rst  bytesparse.io.SEEK_CUR.rst  bytesparse.io.SEEK_DATA.rst  bytesparse.io.SEEK_END.rst  bytesparse.io.SEEK_HOLE.rst  bytesparse.io.SEEK_SET.rst  bytesparse.io.rst  bytesparse.mutable.Memory.rst  bytesparse.mutable.collapse_blocks.rst  bytesparse.mutable.rst  bytesparse.rst
docs/_templates/: custom-module-template.rst
scripts/: cython_build_src.py  cython_build_tests.py
src/bytesparse/: __init__.py  _c.c  _c.pxd  _c.pyx  _py.py  base.py  inplace.py  io.py  mutable.py
tests/: _common.py  _test_c.pyx  test_c.py  test_inplace.py  test_io.py  test_mutable.py  test_py.py  test_sketches.py
