[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61"]

[project]
authors = [{name = "Andrea Zoppi", email = "texzk@email.it"}]
classifiers = [
    # complete classifier list:
    # http://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Software Development",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Utilities",
]
description = "Library to handle sparse bytes within a virtual memory space"
dynamic = ["version"]
license = {text = "BSD-2-Clause"}
name = "bytesparse"
readme = "README.rst"
requires-python = ">= 3.7"

[project.optional-dependencies]
testing = ["pytest"]

[project.urls]
documentation = "https://bytesparse.readthedocs.io"
source = "https://github.com/TexZK/bytesparse"
tracker = "https://github.com/TexZK/bytesparse/issues"

[tool.setuptools.dynamic]
version = {attr = "bytesparse.__version__"}
